# project_tcc

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  JULES_SPEC_PERSISTENCE_PROMPT.md  PLANNING_WORKFLOW.md  Proposta_TCC_Alexandre_Tavares.docx  Proposta_TCC_Alexandre_Tavares.md  README.md  SPEC_DRIVEN_ARCHITECTURE_PLAN.md  agent.py  agent_debug_output.txt  agile_simple.db  agile_sqlmodel.db  agile_sqlmodel.py  api.py  architecture_review_issues.md  asyncio_test.py  comentarios_do_professor.txt  diff.patch  eID-Quickinstaller-5.0.26.dmg  frontend_test.py  implementation_plan.md  input_for_test.txt  last_3_commits_diff.txt  last_commit_diff.txt  main copy.py  main.py  my_agent_data.db  orchestrator_instructions.txt  patch_delete_project_story.py  patch_imports.py  patch_test_dashboard_pr.py  pr_description.txt  print_error.py  product_workflow.py  pyproject.toml  run_tests.sh  scrum_agentic_system.mmd  (+8 more)
.Jules/: palette.md
.github/: copilot-instructions.md
artifacts/: EXTRACTION_README.md  compiled_authority_product_4.html  metrics_summary.csv  metrics_summary.json  metrics_summary_project_4.md  nasa_tlx_raw_5d_form.csv  smoke_runs.jsonl  smoke_runs_s2.jsonl  smoke_runs_test.jsonl
cli/: __init__.py  main.py
config/: models.test.yaml  models.yaml
dad_joke_agent/: __init__.py  agent.py
db/: migrations.py
docs/: ARCHITECTURE_ANALYSIS_REPORT.md  ARCHITECTURE_REVIEW_CODEX_V2.md  CODE_REVIEW_PERSONA_ENFORCEMENT.md  JULES_FK_FIX.md  JULES_WHITELIST_FIX.md  PERSONA_DRIFT_ANALYSIS.md  REAL_FIX_2025_11_30.md  RESPONSE_TO_JULES_PERSONA_ENFORCEMENT.md  SPEC_AUTHORITY_PR_ISSUES.md  STATE_RECONSTRUCTION_STRATEGY.md  STORY_ALIGNMENT_VALIDATION_ISSUE.md  VALIDATION_BENCHMARK_FORMAT.md  agent-cli-manual.md  implementation_plan.md.resolved  reports.txt  story-packet-schema-v1.md  task-packet-schema-v1.md  task-packet-schema-v2.md  task-packet-vision.md
email_agent/: __init__.py  agent.py
frontend/: app.js  index.html  project.html  project.js
greeting_agent/: __init__.py  agent.py
memory_agent/: __init__.py  agent.py  main.py  utils.py
mermaid_schemes/: ARCHITECTURE.md  CURRENT_IMPLEMENTATION_ANALYSIS.md  CURRENT_PROJECT_STATUS.md  WORKFLOW_DIAGRAMS.md
models/: __init__.py  agent_workbench.py  core.py  db.py  enums.py  events.py  specs.py
notebooks/: learning.ipynb  testing_db.ipynb
orchestrator_agent/: agent.py  instructions.txt  new_project_phase_1_enforcer.evalset.json
product_roadmap_agent/: agent.py
product_vision_agent/: __init__.py  agent.py  evalset5d8c75.evalset.json  instructions.txt  tools.py
questions_answering_agent/: __init__.py  agent.py  basic_stateful_session.py
repositories/: __init__.py  product.py  session.py  story.py
routers/: __init__.py  sprint.py
scripts/: _audit_stories.py  _debug_output.txt  _debug_validation.py  _debug_validation_detail.py  _recompile_authority.py  analyze_benchmark.py  analyze_disagreements.py  apply_story_validation.py  benchmark_delete_project_story.py  benchmark_list_sprints.py  benchmark_product_structure.py  benchmark_project_details.py  benchmark_projects_payload.py  benchmark_roadmap.py  benchmark_roadmap_creation.py  benchmark_save_sprint_tool.py  benchmark_sprint_planning.py  build_validation_benchmark_cases.py  check_db_failures.py  check_product4.py  convert_proposal.py  debug_full_pipeline.py  debug_tools_dict.py  delete_project.py  delete_session_stories.py  dry_run_story_validation.py  eval_spec_validation.py  export_benchmark_for_labeling.py  export_snapshot.py  extract_tcc_metrics.py  fix_persona_drift.py  fix_sprint_data.py  generate_example.py  generate_synthetic_cases.py  hydrate_benchmark_db.py  import_human_labels.py  inspect_db_schema.py  inspect_session_stories.py  migrate_add_persona_column.py  migrate_add_product_personas.py  (+13 more)
services/: __init__.py  backlog_runtime.py  interview_runtime.py  orchestrator_context_service.py  orchestrator_query_service.py  packet_renderer.py  roadmap_runtime.py  setup_service.py  sprint_input.py  sprint_runtime.py  story_close_service.py  story_runtime.py  task_execution_service.py  vision_runtime.py  workflow.py
specs/: 3d_height_technical_specification.md  assignment.md  gen_ai_spec_v2.md  hashbrown.md  smoke_spec_full.md  test_product_1_spec.md  test_quadra.md  test_quadra_en.md
test_specs/: api_spec.txt  genai_spec.md  large_spec.md  small_spec.md  test_quadra.md
tests/: conftest.py  test_agent_tool_runtime_import_boundary.py  test_agent_workbench_application.py  test_agent_workbench_authority_projection.py  test_agent_workbench_cli.py  test_agent_workbench_command_schema.py  test_agent_workbench_context_pack.py  test_agent_workbench_contract_import_boundary.py  test_agent_workbench_diagnostics.py  test_agent_workbench_envelope.py  test_agent_workbench_error_codes.py  test_agent_workbench_fake_mutation.py  test_agent_workbench_fingerprints.py  test_agent_workbench_mutation_ledger.py  test_agent_workbench_phase1_integration.py  test_agent_workbench_project_create_cli_integration.py  test_agent_workbench_project_setup.py  test_agent_workbench_read_projection.py  test_agent_workbench_schema_readiness.py  test_agent_workbench_session_reader.py  test_agent_workbench_task_status.py  test_agent_workbench_version.py  test_alignment_checker_authority_pinning.py  test_alignment_evidence_persistence.py  test_api_backlog_flow.py  test_api_dashboard.py  test_api_delete_story.py  test_api_roadmap_flow.py  test_api_route_registration.py  test_api_runtime_import_boundary.py  test_api_schema_modules.py  test_api_sprint_close.py  test_api_sprint_flow.py  test_api_story_close.py  test_api_story_interview_flow.py  test_api_task_execution.py  test_api_vision_flow.py  test_apply_story_validation_script.py  test_async_input.py  test_authority_gate.py  (+134 more)
tool_agent/: agent.py
tools/: __init__.py  db_tools.py  export_snapshot.py  orchestrator_tools.py  spec_tools.py  story_query_tools.py
utils/: __init__.py  adk_runner.py  agent_io.py  api_schemas.py  cli_output.py  colors.py  failure_artifacts.py  helper.py  logging_config.py  model_config.py  persistence.py  (+7 more)
(+367 files in other folders)
