[project]
name = "project-tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "google-adk>=1.16.0",
    "icecream>=2.1.8",
    "ipykernel>=7.0.1",
    "litellm>=1.78.3",
    "markdown>=3.6",
    "playwright>=1.58.0",
    "python-dotenv>=1.0.1",
    "pylint>=4.0.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.2",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
    "yfinance>=0.2.66",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that call external LLM APIs (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "ty>=0.0.26",
]
